Fixed column width, sidebar spacing, and font issues across the site.

--- a/scss/partials/_fonts.scss
+++ b/scss/partials/_fonts.scss
@@ -62,6 +62,10 @@
 
 	}
 
+	.spotlight h2 a {
+		font-family: 'Verlag-Bold';
+	}
+
 	.sidebar_menu #nav_explore li a, .sidebar_menu #nav_explore.children>li:last-child a, .sidebar_menu #nav_explore>li:last-child a, .sidebar_menu .widget ul li a, .widget-area #nav_explore li a, .widget-area #nav_explore.children>li:last-child a, .widget-area #nav_explore>li:last-child a, .widget-area .widget ul li a {
 		font-family: 'Verlag-Book';
 	}
