--- a/scss/theme/_sidebar.scss
+++ b/scss/theme/_sidebar.scss
@@ -280,7 +280,7 @@
 	width: 23%;
 	float: left;
 	vertical-align: top;
-	margin-top: 3em;
+	margin-top: 0em;
 	
 	
 	
